name:                webcloud
version:             0.1.0.0
synopsis:            optparse CGI generator
description:         Uses optparse-applicative to convert command line options into
                     a web CGI form
license:             BSD2
license-file:        LICENSE
author:              Maxwell Swadling
maintainer:          Anchor Engineering <engineering@anchor.com.au>
copyright:           2015 Anchor Systems
category:            Web
build-type:          Simple
cabal-version:       >=1.18

library
  exposed-modules:     Web.Cloud
  ghc-options:         -Wall
  build-depends:       base >=4.7 && < 5, optparse-applicative >= 0.11.0, cgi >= 3001.2.1.0, bytestring >= 0.10.4.0
  hs-source-dirs:      src
  default-language:    Haskell2010

executable testcloud
  main-is:             testcloud.hs
  ghc-options:         -Wall
  build-depends:       base >=4.7 && < 5, optparse-applicative >= 0.11.0, webcloud
  default-language:    Haskell2010
